--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,18 @@
     width: 700px;
     border: 1px solid blue;
 }
+
+.GameSelectorButton {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+    float: left;
+  }
